# pants-ty-plugin

./: .gitignore  AGENTS.md  LICENSE  README.md  mise.toml  pants.ci.toml  pants.toml  pyproject.toml
.github/workflows/: pants.yml  release.yml
.mise/tasks/: check  lint  release  release-dry-run  test  verify
pants-plugins/: BUILD  lock.txt
pants-plugins/pants_ty/: BUILD  __init__.py  known_versions.py  register.py  rules.py  skip_field.py  subsystem.py
scripts/: generate_known_versions.py  release.sh
tests/pants_ty/: BUILD  test_integration.py  test_known_versions.py  test_rules_unit.py  test_skip_field.py  test_subsystem.py
